--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ DB_USER='francs'
 DB_PASSWORD='master'
 DB_HOST='127.0.0.1'
 MODE='dev'
-ALLOWED_HOSTS='*'
+ALLOWED_HOSTS = ['*']
 DISABLE_COLLECTSTATIC=1
